--- a/oauth2client/build.gradle
+++ b/oauth2client/build.gradle
@@ -3,4 +3,5 @@ dependencies {
     implementation 'org.springframework.security:spring-security-test'
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:'
 }
