--- a/oauth2client/build.gradle
+++ b/oauth2client/build.gradle
@@ -4,4 +4,5 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 }
