--- a/oauth2client-2/src/main/resources/application.yml
+++ b/oauth2client-2/src/main/resources/application.yml
@@ -41,7 +41,11 @@ spring:
 
 ## logging
 logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} ${LOG_LEVEL_PATTERN:%-5p} ${PID} --- [%15.15t] %-40.40logger{39} :%06L : %m%n"
   level:
     root: info
     web: debug
-    com.bob: debug
+    com:
+      bob: debug
+      example: debug
