--- a/oauth2client-social-login/src/main/resources/application.yml
+++ b/oauth2client-social-login/src/main/resources/application.yml
@@ -33,7 +33,16 @@ spring:
             scope:
               - profile
               - email
-
+          kakao:
+            client-id: df8f588c8fb293ee38ecdc51ce854763
+            client-secret: ${kakao_client_secret}
+            authorization-grant-type: authorization_code
+            client-name: oauth2-exam-app
+            redirect-uri: http://localhost:8081/login/oauth2/code/kakao
+            scope:
+              - openid
+              - profile
+              - email
         provider:
           keycloak:
             authorization-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/auth
@@ -47,6 +56,13 @@ spring:
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
+          kakao:
+            issuer-uri: https://kauth.kakao.com # 사실 issuer-uri 만 설정할 경우 아래 uri 는 필요 없음
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v1/oidc/userinfo
+            jwk-set-uri: https://kauth.kakao.com/.well-known/jwks.json
+            user-name-attribute: id
 
   mvc:
     static-path-pattern: /static/**
