--- a/oauth2-resource-server/src/main/resources/application.yml
+++ b/oauth2-resource-server/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
         jwt:
           issuer-uri: http://localhost:8080/realms/oauth2
           jwk-set-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/certs
+          jws-algorithms:
+            - RS512
 
 
 management:
