--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,4 @@ include 'oauth2client-2'
 include 'oauth2client-3'
 include 'oauth2client-social-login'
 include 'oauth2-resource-server'
+include 'oauth2-resource-server-verify'
