feat: MAC 검증 기능 구현 - JwtDecoder 에 의한 검증 예제 소스 추가

--- a/resource-server/src/main/resources/application.yml
+++ b/resource-server/src/main/resources/application.yml
@@ -2,6 +2,14 @@
 server:
   port: 8081
 
+## spring
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jws-algorithms: HS256
+
 ## logging
 logging:
   pattern:
