--- a/resource-server/src/main/resources/application.yml
+++ b/resource-server/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          jws-algorithms: HS256
+          jws-algorithms: RS256
 
 ## logging
 logging:
