feat: RSA 검증 기능 구현 - PublicKey.txt 에 의한 검증 예제 소스 추가

--- a/resource-server/src/main/resources/application.yml
+++ b/resource-server/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
       resourceserver:
         jwt:
           jws-algorithms: RS512
+          public-key-location: classpath:certs/publicKey.txt
 
 ## logging
 logging:
