--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ subprojects {
     }
 
     dependencies {
-        developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//        developmentOnly 'org.springframework.boot:spring-boot-devtools'
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
         implementation 'org.springframework.boot:spring-boot-starter-test'
 
