--- a/resource-server/src/main/resources/application.yml
+++ b/resource-server/src/main/resources/application.yml
@@ -8,8 +8,9 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          jws-algorithms: RS512
-          public-key-location: classpath:certs/publicKey.txt
+          jwk-set-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/certs
+#          jws-algorithms: RS512
+#          public-key-location: classpath:certs/publicKey.txt
 
 ## logging
 logging:
