feat: Resource Server - Opaque 개념 및 프로세스 이해 예제 코드 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ include 'oauth2-resource-server-verify'
 
 include 'resource-server'
 include 'resource-server-authorization'
+include 'resource-server-opaque'
