feat: OAuth 2.0 Client + OAuth 2.0 Resource Server 연동(2) 예제 소스 추가

--- a/oauth2-client-server/src/main/resources/application.yml
+++ b/oauth2-client-server/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
             client-name: oauth2-client-app
             client-secret: X3fGojFQlwZqQY4wwMCnzfSAqCdKSxfk
             redirect-uri: http://localhost:8081/login/oauth2/code/keycloak
-            scope: openid,email
+            scope: openid,email,photo
 
 ## logging
 logging:
