--- a/oauth2-client-resource-server/src/main/resources/application.yml
+++ b/oauth2-client-resource-server/src/main/resources/application.yml
@@ -6,6 +6,9 @@ server:
 spring:
   security:
     oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/certs
 
 ## logging
 logging:
