feat: 마지막 예제 모듈 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,8 @@ include 'oauth2-client-resource-server'
 include 'oauth2-authorization-01'
 include 'oauth2-authorization-02'
 include 'oauth2-authorization-03'
+
+include 'final-oauth2-authorization-server'
+include 'final-oauth2-resource-server-album'
+include 'final-oauth2-resource-server-friend'
+include 'final-oauth2-client'
