feat: 예제 소스 추가

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,8 @@ subprojects {
         testCompileOnly 'org.projectlombok:lombok'
         testAnnotationProcessor 'org.projectlombok:lombok'
 
+        implementation project(':final-oauth2-core')
+
     }
 
     test {
