feat: final-oauth2-core library 개별로 추가

--- a/final-oauth2-resource-server-friend/build.gradle
+++ b/final-oauth2-resource-server-friend/build.gradle
@@ -3,4 +3,6 @@ dependencies {
     implementation 'org.springframework.security:spring-security-test'
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+
+    implementation project(':final-oauth2-core')
 }
