--- a/final-oauth2-client/build.gradle
+++ b/final-oauth2-client/build.gradle
@@ -5,4 +5,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+    implementation project(':final-oauth2-core')
 }
