--- a/final-oauth2-authorization-server/build.gradle
+++ b/final-oauth2-authorization-server/build.gradle
@@ -3,4 +3,7 @@ dependencies {
     implementation 'org.springframework.security:spring-security-test'
 
     implementation 'org.springframework.security:spring-security-oauth2-authorization-server:1.0.1'
+
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 }
